--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to AWS Lambda
+name: Affiliate Marketing Automation
 
 on:
   push:
@@ -17,11 +17,6 @@ jobs:
         with:
           python-version: '3.8'
 
-      - name: Install Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '16'
-
       - name: Cache pip
         uses: actions/cache@v3
         with:
@@ -30,24 +25,24 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pip-
 
-      - name: Cache npm
-        uses: actions/cache@v3
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-npm-${{ hashFiles('**/package.json') }}
-          restore-keys: |
-            ${{ runner.os }}-npm-
-
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install serverless-python-requirements
-          npm install -g serverless
-          serverless plugin install -n serverless-python-requirements
+          pip install -r requirements.txt -t package/
+          cp lambda_function.py package/
 
-      - name: Deploy to AWS
+      - name: Create Lambda deployment package
+        run: |
+          cd package
+          zip -r ../lambda_function.zip .
+
+      - name: Deploy to AWS Lambda
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_DEFAULT_REGION: us-east-1
-        run: serverless deploy --stage dev
+        run: |
+          aws lambda update-function-code \
+            --function-name my-lambda-function \
+            --zip-file fileb://lambda_function.zip \
+            --region us-east-1
