--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,6 +36,14 @@ jobs:
           cd package
           zip -r ../lambda_function.zip .
 
+      - name: Upload to S3
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: us-east-1
+        run: |
+          aws s3 cp lambda_function.zip s3://${{ secrets.AWS_S3_BUCKET }}/lambda_function.zip
+
       - name: Deploy to AWS Lambda
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -44,5 +52,6 @@ jobs:
         run: |
           aws lambda update-function-code \
             --function-name affiliateMarketingAutomation \
-            --zip-file fileb://lambda_function.zip \
+            --s3-bucket ${{ secrets.AWS_S3_BUCKET }} \
+            --s3-key lambda_function.zip \
             --region us-east-1
