test deployment on reduced lib size

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-transformers
-torch
-accelerate
-python-dotenv
-huggingface_hub
-xai-sdk
+# transformers
+# torch
+# accelerate
+# python-dotenv
+# huggingface_hub
+# xai-sdk
 requests
 
 
